# researchai

./: .gitignore  .pre-commit-config.yaml  README.md  exp.ipynb  pyproject.toml  requirements.txt  settings.ini
.github/workflows/: test.yaml  test.yml
AI_Algorithms_Implementation/: _modidx.py  core.py
_proc/: 00_core.ipynb  00_layers.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml.bak
_proc/_docs/: core.html  index.html  layers.html  robots.txt  search.json  sitemap.xml
_proc/_docs/site_libs/bootstrap/: bootstrap.min.css
nbs/: 00_core.ipynb  00_intro.ipynb  00_layers.ipynb  01_layers.ipynb  _quarto.yml  index.ipynb  sidebar.yml
nnfs/: activations.py  exp.ipynb  layers.py  losses.py  metrics.py  utils.py
researchai/: _modidx.py  activations.py  commons.py  datasets.py  exp.ipynb  layers.py  losses.py  metrics.py  optimizers.py  utils.py
researchai/nn/: activations.py  commons.py  datasets.py  exp.ipynb  layers.py  losses.py  metrics.py  utils.py
src/: KNN.ipynb  _modidx.py  main.ipynb
src/nbs/: main.ipynb
src/nn/: activations.py  commons.py  layers.py  losses.py  metrics.py
src/nn/tests/: __init__.py  test_activations.py  test_layers.py  test_losses.py  test_network.py
tests/: test_activations.py  test_layers.py  test_losses.py  test_network.py
tests/nn/: __init__.py  test_activations.py  test_layers.py  test_losses.py  test_network.py
