[tool.poetry]
name = "researchai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
nnfs = "^0.5.1"
matplotlib = "^3.7.1"
autopep8 = "^2.0.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
