[tool.poetry]
name = "researchai"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
torch = "^2.0.1"
matplotlib = "^3.7.2"
pytest = "^7.4.0"
autopep8 = "^2.0.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
