[tool.poetry]
name = "researchai"
version = "0.1.0"
description = ""
authors = ["sampath <sampathkovvali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
plotly = "^5.16.1"
pandas = "^2.1.0"
chart-studio = "^1.1.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.2"
autopep8 = "^2.0.2"
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
